Fixed bug with reading from current directory